Fixed overflow on block options modal

--- a/vue/src/forms/forms.scss
+++ b/vue/src/forms/forms.scss
@@ -8,6 +8,7 @@
     width: 30% !important;
     .body {
         height: calc(100% - 65px);
+        overflow-y: auto;
     }
     .field.select-elements .heading {
         display:flex;
